--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </div>
 
     <div class="filaHabilidades">
-        <img class="controlImg" src="./img/nube.gif" alt="control">
+        <img class="controlImg" src="./img/persona.gif" alt="control">
         <h3> Motivacion personal </h3>
-        <p>Disfruto mucho lo que hago y me emociona saber que cada dia estoy mas serca de cumplir mis metas y sueños de niña y aunque ya me siento realizada de ver hastadonde he podido llegar me alegra ver muy serca mis sueños y me motivo cada dia para continuar y cumplirlos  </p>
+        <p>Disfruto mucho lo que hago y me emociona saber que cada dia estoy mas serca de cumplir mis metas y sueños de niña y aunque ya me siento realizada de ver hastadonde he podido llegar me alegra ver muy serca mis sueños y me motivo cada dia para continuar y cumplirlos.</p>
     </div>
     <hr>
     <h2>Contactar</h2>
